#13 - 13-parametrized-unit-test - refactor methods in class LocationEntityCoordinatesValidator for better testing